--- a/src/styles/modules/layout.module.scss
+++ b/src/styles/modules/layout.module.scss
@@ -11,10 +11,6 @@
 .socialIcon {
     width: 40px;
 }
-main {
-    overflow: hidden;
-}
-
 .sidebar {
     max-height: 0;
     overflow: hidden;
